--- a/isometric-demo/src/assets/index.html
+++ b/isometric-demo/src/assets/index.html
@@ -9,9 +9,5 @@
 </head>
 <body>
     <div id="test" style="border: 0"></div>
-<script type="text/javascript" src="bundle.js"></script></body>
-<!--<script type="text/javascript" src="gameState.js"></script></body>-->
-<!--<script type="text/javascript" src="main.js"></script></body>-->
-<!--<script type="text/javascript" src="dude.js"></script></body>-->
-<!--<script type="text/javascript" src="map.js"></script></body>-->
+</body>
 </html>
