--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -11,7 +11,16 @@
     <script type="text/javascript" src="data/slick-ui.min.js"></script>
 
     <script>
-        document.oncontextmenu = function () { return false; };
+        document.oncontextmenu = function () {
+            return false;
+        };
+
+        document.addEventListener('mousedown', function (e) {
+            if (e.button === 1) {
+                e.preventDefault();
+            }
+        });
+
     </script>
 </head>
 <body>
