Refactor Add EZGUI menu Moved vendor js to vendor folder Move menu to menu.js file

--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -2,13 +2,16 @@
 <head>
     <title>Phaser experiments</title>
 
-    <!--<script type="text/javascript" src="data/phaser.min.js"></script>-->
-    <script type="text/javascript" src="data/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="data/phaser.js"></script>
-    <script type="text/javascript" src="data/phaser-tiled.js"></script>
-    <script type="text/javascript" src="data/phaser-plugin-isometric.min.js"></script>
+    <script type="text/javascript" src="data/vendor/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="data/vendor/phaser.js"></script>
+    <script type="text/javascript" src="data/vendor/phaser-tiled.js"></script>
+    <script type="text/javascript" src="data/vendor/phaser-plugin-isometric.min.js"></script>
+    <script type="text/javascript" src="data/vendor/slick-ui.min.js"></script>
+    <script type="text/javascript" src="data/vendor/phaser-compat-2.4.js"></script>
+    <script type="text/javascript" src="data/vendor/EZGUI.js"></script>
+
     <script type="text/javascript" src="data/tiles.js"></script>
-    <script type="text/javascript" src="data/slick-ui.min.js"></script>
+    <script type="text/javascript" src="data/menu.js"></script>
 
     <script>
         document.oncontextmenu = function () {
