Build house Some debug

--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -23,10 +23,9 @@
                 e.preventDefault();
             }
         });
-
     </script>
 </head>
-<body>
+<body style="margin: 0;  overflow:  hidden;">
 
 </body>
 </html>
