--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -12,6 +12,7 @@
 
     <script type="text/javascript" src="data/tiles.js"></script>
     <script type="text/javascript" src="data/menu.js"></script>
+    <script type="text/javascript" src="data/map.js"></script>
 
     <script>
         document.oncontextmenu = function () {
