--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -9,6 +9,7 @@
     <script type="text/javascript" src="data/vendor/slick-ui.min.js"></script>
     <script type="text/javascript" src="data/vendor/phaser-compat-2.4.js"></script>
     <script type="text/javascript" src="data/vendor/EZGUI.js"></script>
+    <script type="text/javascript" src="data/vendor/phaser-kinetic-scrolling-plugin.min.js"></script>
 
     <script type="text/javascript" src="data/tiles.js"></script>
     <script type="text/javascript" src="data/menu.js"></script>
