--- a/isometric/index-iso.html
+++ b/isometric/index-iso.html
@@ -27,7 +27,7 @@
         });
     </script>
 </head>
-<body style="margin: 0;  overflow:  hidden;">
-
+<body style="margin: 0;  overflow:  hidden; background: black">
+<div id="test" style="margin: auto; width: 1280"></div>
 </body>
 </html>
